exports[`test an add more licenses button should be shown when no more licenses are available 1`] = `
<li
  className="caAtBd">
  <span
    className="fXreAk">
    <span
      className="ipTaeZ">
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <span
    className="iyDwOW">
    <span
      className="kyRcdL">
      Subscription name
    </span>
    <span
      className="fdTSGx">
      <span>
        0/20 remaining
      </span>
    </span>
    <a
      className="cLgDIl"
      href="http://store.url.com">
      <span>
        Get another subscription
      </span>
    </a>
  </span>
  <div>
    <noscript />
  </div>
  <span
    className="kZrKRI">
    <a
      className="eRLPss"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Manage
      </span>
    </a>
  </span>
</li>
`;

exports[`test the sitesubscription matches the snapshot 1`] = `
<li
  className="caAtBd">
  <span
    className="fXreAk">
    <span
      className="ipTaeZ">
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="ldWdTm"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="checkbox"
          tabIndex="0">
          <span
            className="diphEL" />
        </div>
        <span
          aria-hidden="true"
          className="euIAzV">
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="kganGp"
      src="icon.svg" />
  </span>
  <span
    className="iyDwOW">
    <span
      className="kyRcdL">
      Subscription name
    </span>
    <span
      className="fdTSGx">
      <span>
        6/20 remaining
      </span>
    </span>
  </span>
  <div>
    <noscript />
  </div>
  <span
    className="kZrKRI">
    <a
      className="eRLPss"
      href="/account/subscriptions/subId"
      onClick={[Function]}>
      <span>
        Manage
      </span>
    </a>
  </span>
</li>
`;
